# ecommerce_delay_prediction

./: .dockerignore  .env.example  .gitignore  HANDOFF.md  Makefile  README.md  cloud_training.ipynb  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  evaluate_final.py  pyproject.toml  requirements-dashboard.txt  requirements-prod.txt  requirements.txt  setup_database.py  simulate_prediction.py  verify_enriched_api.py
.dvc/: config  config.local
.dvc/tmp/: dag.md  lock
.github/workflows/: ci.yml  deploy.yml
delivery_delay_prediction/: __init__.py  config.py  dataset.py  features.py  plots.py  train.py
delivery_delay_prediction/modeling/: compare_models.py  predict.py  train.py  train_lightgbm.py  tune_catboost.py  tune_lightgbm.py
docker/: Dockerfile.api  Dockerfile.dashboard
docs/: ARCHITECTURE.md
models/: best_catboost_params.json  best_lightgbm_params.json  catboost_feature_importance.csv  feature_importance.csv  lightgbm_feature_importance.csv
notebooks/: 01_interim_eda.ipynb  02_business_insights.ipynb  03_features_model_eda.ipynb
reports/: feature_insights.py
sql/: feature_queries.sql  load_data.sql  schema.sql
src/api/: main.py
src/dashboard/: app.py
tests/: test_api.py  test_features.py
