[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "delivery_delay_prediction"
version = "0.0.1"
description = "Predict late deliveries using the Olist e-commerce dataset"
authors = [
  { name = "Animesh Dwivedi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["delivery_delay_prediction"]
include = ["pyproject.toml", "delivery_delay_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["delivery_delay_prediction"]
force-sort-within-sections = true

